Fix Environmental Research Group text cutoff on small screens

--- a/styles.css
+++ b/styles.css
@@ -631,6 +631,7 @@ a[style*="color: rgb(38, 168, 255)"]:hover {
     
     .hero-subtext p {
         font-size: 16px;
+        margin-left: 0 !important;
     }
     
     .carousel-slide img {
@@ -721,6 +722,7 @@ a[style*="color: rgb(38, 168, 255)"]:hover {
     
     .hero-subtext p {
         font-size: 14px;
+        margin-left: 0 !important;
     }
     
     .carousel-slide img {
